# Sparce-matrix-implementation

./: .gitignore  CMakeLists.txt  DenseMatrix.h  NumericTypeConcept.h  RowQueue.h  SparseRowWiseMatrix.h  Triplet.h
Comparison/: CMakeLists.txt
ComparisonMultMatrix/: CMakeLists.txt  config.txt  main.cpp
ComparisonMultVector/: CMakeLists.txt  main.cpp
Sandbox/: CMakeLists.txt  main.cpp
Slides/pl/: Implementacja macierzy rzadkich.pptx
